--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>waste-watchdog-platform</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Waste-Management</title>
   </head>
 
   <body>
+    <header>
+      <img src="/assets/wm.png" alt="Waste Watchdog Logo" width="150" height="auto" />
+    </header>
     <div id="root"></div>
+
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
