--- a/index.html
+++ b/index.html
@@ -4,30 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Waste-Management</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: Arial, sans-serif;
-      }
-      header {
-        padding: 20px;
-        background-color: #f4f4f4;
-      }
-      img {
-        max-width: 150px;
-        height: auto;
-      }
-    </style>
+    <meta name="description" content="Lovable Generated Project" />
   </head>
 
   <body>
     <header>
-      <img 
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAFsirPMzSsyWkgK8P-qm9CoBy3M-eYkB8eQ&s" 
-        alt="Waste Watchdog Logo" 
-      />
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAFsirPMzSsyWkgK8P-qm9CoBy3M-eYkB8eQ&s" alt="Waste Watchdog Logo" width="150" height="auto" />
     </header>
-
     <div id="root"></div>
 
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
