--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAFsirPMzSsyWkgK8P-qm9CoBy3M-eYkB8eQ&s" alt="Waste Watchdog Logo" width="150" height="auto" />
-    <title>Waste-Management</title>
+    Waste-Management</title>
     <meta name="description" content="Lovable Generated Project" />
   </head>
 
   <body>
-    <header>
-      
-    </header>
     <div id="root"></div>
 
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
