--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAFsirPMzSsyWkgK8P-qm9CoBy3M-eYkB8eQ&s" />
     <title>Waste-Management-platform</title>
     <title>Waste-Management</title>
   </head>
