--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAFsirPMzSsyWkgK8P-qm9CoBy3M-eYkB8eQ&s" />
     <title>Waste-Management-platform</title>
     <title>Waste-Management</title>
+    <style>
+    .nav-logo {
+      width: 40px; 
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  </style>
+
   </head>
 
   <body>
-    <header>
-    </header>
     <div id="root"></div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
